--- a/services.html
+++ b/services.html
@@ -332,11 +332,11 @@
     <main class="page-wrapper">
       <div class="dark-mode">
         <!-- Navbar. Remove 'fixed-top' class to make the navigation bar scrollable with the page-->
-        <header class="navbar navbar-expand-lg fixed-top">
-          <div class="container"><a class="navbar-brand pe-sm-3" href="index.html"><span class="text-primary flex-shrink-0 me-2">
-                <a class="navbar-brand d-flex align-items-center" href="index.html" style="margin-left: -4px;">
-                 <img src="assets/favicon/logix.png" alt="Logix" class="img-fluid" style="height: 65px;">
-        </a>
+              <header class="navbar navbar-expand-lg fixed-top">
+          <div class="container">
+            <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
+              <img src="assets/favicon/logix.png" alt="Logix" class="img-fluid" style="height: 55px;">
+            </a>
 
             <div class="form-check form-switch mode-switch order-lg-2 me-3 me-lg-4 ms-auto" data-bs-toggle="mode">
               <input class="form-check-input" type="checkbox" id="theme-mode">
@@ -620,7 +620,7 @@
             <div class="swiper-slide"><img class="d-block mx-auto" src="assets/img/clients/NBC.png" width="100" alt="Philips"></div>
             <div class="swiper-slide"><img class="d-block mx-auto" src="assets/img/clients/TUNZAA.png" width="100" alt="Careem"></div>
             <div class="swiper-slide"><img class="d-block d-dark-mode-none mx-auto" src="assets/img/clients/PBZ.png" width="100" alt="Puma"><img class="d-none d-dark-mode-block mx-auto" src="assets/img/clients/PBZ.png" width="100" alt="PBZ"></div>
-            <div class="swiper-slide"><img class="d-block mx-auto" src="assets/img/clients/shabibynobg.png" width="100" alt="Alpine"></div>
+            <div class="swiper-slide"><img class="d-block mx-auto" src="assets/img/clients/shabiby.PNG" width="100" alt="Alpine"></div>
           </div>
         </div>
         <div class="swiper" dir="rtl" data-swiper-options="{
