--- a/about.html
+++ b/about.html
@@ -326,11 +326,11 @@
     <main class="page-wrapper">
       <div class="dark-mode">
         <!-- Navbar. Remove 'fixed-top' class to make the navigation bar scrollable with the page-->
-        <header class="navbar navbar-expand-lg fixed-top">
-          <div class="container"><a class="navbar-brand pe-sm-3" href="index-2.html"><span class="text-primary flex-shrink-0 me-2">
-                <a class="navbar-brand d-flex align-items-center" href="index.html" style="margin-left: -4px;">
-                  <img src="assets/favicon/logix.png" alt="Logix" class="img-fluid" style="height: 65px;">
-                </a>
+    <header class="navbar navbar-expand-lg fixed-top">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
+      <img src="assets/favicon/logix.png" alt="Logix" class="img-fluid" style="height: 55px;">
+    </a>
 
             <div class="form-check form-switch mode-switch order-lg-2 me-3 me-lg-4 ms-auto" data-bs-toggle="mode">
               <input class="form-check-input" type="checkbox" id="theme-mode">
@@ -609,18 +609,18 @@
                   <!-- Binded items-->
                   <div class="binded-content">
                     <!-- Item-->
-                    <div class="binded-item active" id="author1"><img class="d-block rounded-circle mb-3" src="assets/img/team1.jpg" width="86" alt="Lilianna Bocouse">
-                      <h4 class="mb-0">xxx xxx</h4>
+                    <div class="binded-item active" id="author1"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Lilianna Bocouse">
+                      <h4 class="mb-0">Paul Mathew</h4>
                       <p class="fs-lg text-muted mb-0">Head of Marketing</p>
                     </div>
                     <!-- Item-->
-                    <div class="binded-item" id="author2"><img class="d-block rounded-circle mb-3" src="assets/img/team1.jpg" width="86" alt="Darell Steward">
-                      <h4 class="mb-0">xxx xxx</h4>
+                    <div class="binded-item" id="author2"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Darell Steward">
+                      <h4 class="mb-0">Alex Robert</h4>
                       <p class="fs-lg text-muted mb-0">Project Manager</p>
                     </div>
                     <!-- Item-->
-                    <div class="binded-item" id="author3"><img class="d-block rounded-circle mb-3" src="assets/img/team1.jpg" width="86" alt="Annette Black">
-                      <h4 class="mb-0">xxx xxx</h4>
+                    <div class="binded-item" id="author3"><img class="d-block rounded-circle mb-3" src="assets/img/team/team1.jpg" width="86" alt="Annette Black">
+                      <h4 class="mb-0">Julieth Steven</h4>
                       <p class="fs-lg text-muted mb-0">Mkurugenzi</p>
                     </div>
                   
