--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
     <!-- Page wrapper-->
     <main class="page-wrapper">
       <!-- Navbar. Remove 'fixed-top' class to make the navigation bar scrollable with the page-->
-      <header class="navbar navbar-expand-lg fixed-top">
-        <div class="container"><a class="navbar-brand pe-sm-3" href="index.html"><span class="text-primary flex-shrink-0 me-2">
-    <a class="navbar-brand d-flex align-items-center" href="index.html" style="margin-left: -2px;">
-  <img src="assets/favicon/logix.png" alt="Logix" class="img-fluid" style="height: 65px;">
-</a>
+ <header class="navbar navbar-expand-lg fixed-top">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center me-auto" href="index.html">
+      <img src="assets/favicon/logix.png" alt="Logix" class="img-fluid" style="height: 55px;">
+    </a>
 
 
 
