--- a/about.html
+++ b/about.html
@@ -586,7 +586,7 @@
               <div class="d-flex justify-content-center">
                 <a class="btn btn-icon btn-sm btn-light btn-facebook rounded-circle mx-2" href="#"><i class="ai-facebook"></i></a>
                 <a class="btn btn-icon btn-sm btn-light btn-instagram rounded-circle mx-2" href="#"><i class="ai-instagram"></i></a>
-                <a class="btn btn-icon btn-sm btn-light btn-linkedin rounded-circle mx-2" href="#"><i class="ai-linkedin"></i></a>
+                <a class="btn btn-icon btn-sm btn-light btn-linkedin rounded-circle mx-2" href="https://www.linkedin.com/in/hellen-mrema-682655104"><i class="ai-linkedin"></i></a>
               </div>
             </div>
           </div>
