--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         <!-- Finance -->
         <div class="accordion-item mb-n3 mb-lg-n2 mb-xl-1">
           <h3 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-binded-content="#img-finance" data-bs-target="#panel-finance" aria-expanded="false" aria-controls="panel-finance">Finance</button>
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-binded-content="#img-finance" data-bs-target="#panel-finance" aria-expanded="false" aria-controls="panel-finance">
           </h3>
           <div class="accordion-collapse collapse" id="panel-finance" data-bs-parent="#industries">
             <div class="accordion-body">Empowering digital finance with technology.</div>
@@ -550,7 +550,7 @@
         <div class="binded-content">
           <div class="binded-item active" id="img-healthcare"><img class="rounded-5" src="assets/img/index/industries/healthcare2.jpg" alt="Healthcare"></div>
           <div class="binded-item" id="img-education"><img class="rounded-5" src="assets/img/index/industries/education.JPG" alt="Education"></div>
-          <div class="binded-item" id="img-finance"><img class="rounded-5" src="assets/img/index/industries/finance.jpg" alt="Finance"></div>
+          <div class="binded-item" id="img-finance"><img class="rounded-5" src="assets/img/index/industries/financee.jpg" alt="Finance"></div>
           <div class="binded-item" id="img-transport"><img class="rounded-5" src="assets/img/index/industries/transport.PNG" alt="Transport & Logistics"></div>
           <div class="binded-item" id="img-ecommerce"><img class="rounded-5" src="assets/img/index/industries/ecommerce.JPG" alt="E-commerce"></div>
         </div>
