--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
         <!-- Finance -->
         <div class="accordion-item mb-n3 mb-lg-n2 mb-xl-1">
           <h3 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-binded-content="#img-finance" data-bs-target="#panel-finance" aria-expanded="false" aria-controls="panel-finance">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-binded-content="#img-finance" data-bs-target="#panel-finance" aria-expanded="false" aria-controls="panel-finance">Finance</button>
           </h3>
           <div class="accordion-collapse collapse" id="panel-finance" data-bs-parent="#industries">
             <div class="accordion-body">Empowering digital finance with technology.</div>
